SONARJAVA-6889 Create new structure for storing all collected dependencies (#6068)